--- a/questionnaire/templates/masterquest/index.html
+++ b/questionnaire/templates/masterquest/index.html
@@ -6,19 +6,20 @@
     <h2 id="research-title">Research - Code Smell Detection: assessing interpretability of decision tree-based detections.</h2>
 
     <div>
-            {% lorem 3 p %}
-    </div>
-<!--
-    We refer to "Smells" as pieces of code that need to be improved. Examples of these code smells are Long Methods (method that is too long and tries to do too much) and God Class (classes that tend to centralize the intelligence of the system). By code smells harmfulness, we mean code smells that can degrade the software quality, e. g., bug-prone code smells. 
+        <p>We refer to "Smells" as pieces of code that need to be improved. Examples of these code smells are Long Methods (method that is too long and tries to do too much) and God Class (classes that tend to centralize the intelligence of the system). By code smells harmfulness, we mean code smells that can degrade the software quality, e. g., bug-prone code smells. </p>
 
-The goal of this survey is to identify the perceptions of professionals regarding the harmfulness of code smells. 
+        <p>The goal of this survey is to identify the perceptions of professionals regarding to interpretability decision-tree based detections of code smells. </p>
+        
+        <ul>
+            <li>i. Participant Background (4 questions)</li>
+            <li>ii. Code Smells Harmfulness (7 questions)</li>
+            <li>iii. Additional Comments (2 questions)</li>
+        </ul>
+        <p>Answering the survey should take around 30 minutes of your time. All the data collected from the survey is anonymous. The results of the survey may be reported in academic publications. If you have any questions or concerns, please contact me (christianorossini@ic.ufal.br).</p>
+    </div>   
 
-i. Participant Background (4 questions)
-ii. Code Smells Harmfulness (7 questions)
-iii. Additional Comments (2 questions)
 
-Answering the survey should take around 3 minutes of your time. All the data collected from the survey is anonymous. The results of the survey may be reported in academic publications. If you have any questions or concerns, please contact Rodrigo Lima <rsl@ic.ufal.br>.
--->    
+    
     
     <div id="members">
         <p><strong>Ms Student:</strong> Christiano Rossini (christianorossini@ic.ufal.br)</p>
