ajuste do novo fluxo

--- a/questionnaire/templates/masterquest/survey_task_cc.html
+++ b/questionnaire/templates/masterquest/survey_task_cc.html
@@ -3,36 +3,34 @@
 
 {% block surveyContent %}
    
+    <p>
+        Analyse the model and the code snippets.   
+        Click on each code snippet, analyse the code and try to detect some code smell. 
+        Soon after, analyse the decision tree whose paths, nodes and leafs indicates an unrevelead type of code smell. Try to find out a correlation between each code snippet and the classification tree. 
+    </p>
+
     {% include "masterquest/incTreePanel.html" with showCodeSnippets=True %}
     
     <form action="{% url 'survey' %}" method="POST">    
         {% csrf_token %}  
         <div class="quest0Content questContent">
-            <h3 class="questionDesc">{{questions.0.sequenceNumber}} - {{questions.0.description}}</h3>                         
+            <h3 class="questionDesc">How correlated is the code snippet 1 and the tree model?</h3>                         
             {{form.answerq1}}            
         </div>               
         <div class="quest1Content questContent">
-            <h3 class="questionDesc">{{questions.1.sequenceNumber}} - {{questions.1.description}}</h3>                         
+            <h3 class="questionDesc">What's the reason behind the choice you've made above?</h3>                         
             {{form.answerq1_complement}}                                     
         </div>
         <div class="quest2Content questContent">
-            <h3 class="questionDesc">{{questions.2.sequenceNumber}} - {{questions.2.description}}</h3>                         
+            <h3 class="questionDesc">How correlated is the code snippet 2 and the tree model?</h3>                         
             {{form.answerq2}}                                     
         </div>
         <div class="quest3Content questContent">
-            <h3 class="questionDesc">{{questions.3.sequenceNumber}} - {{questions.3.description}}</h3>                         
+            <h3 class="questionDesc">What's the reason behind the choice you've made above?</h3>                         
             {{form.answerq2_complement}}
         </div>
-        <div class="quest4Content questContent">
-            <h3 class="questionDesc">{{questions.4.sequenceNumber}} - {{questions.4.description}}</h3>                         
-            {{form.answerq3}}                     
-        </div>
-        <div class="quest5Content questContent">
-            <h3 class="questionDesc">{{questions.5.sequenceNumber}} - {{questions.5.description}}</h3>                         
-            {{form.answerq3_complement}}                     
-        </div>
-
-        <input type="submit" value="Next Task" class="btn btn-primary" />
+        
+        <input type="submit" value="Next model" class="btn btn-primary" />
                
         {{form.task}}
         {{form.dtModel}}   
