--- a/questionnaire/templates/masterquest/header.html
+++ b/questionnaire/templates/masterquest/header.html
@@ -1,5 +1,5 @@
 {% load static %}
-<img src="{% static 'masterquest/images/ufal.png' %}" />
+<img src="{% static 'masterquest/images/ufal_h72px.png' %}" />
 <div id="headerheader">
     <p>Universidade Federal de Alagoas</p>
     <p>Instituto de Computa&ccedil;&atilde;o</p>
