--- a/questionnaire/static/masterquest/style.css
+++ b/questionnaire/static/masterquest/style.css
@@ -4,7 +4,7 @@ body{
 
 #header{    
     color: darkred;
-    height: 120px;
+    height: 72px;
     font-weight: bold;
     
     display: -ms-flexbox;
@@ -17,7 +17,7 @@ body{
 
     align-items: center;
     
-    margin-bottom: 20px;   
+    margin-bottom: 10px;   
 }
 
 #header img{    
@@ -26,29 +26,29 @@ body{
 }
 
 #headerheader{     
-    padding-left: 30px;   
- 
+    padding-left: 20px;  
+    font-size: 0.8em 
 }
 
 #headerheader p{
     margin: 0px;    
 }
 
-#content.container{
+#content.container-fluid{
     border: 1px solid;
     border-color: lightgray;
     /* Safari 3-4, iOS 1-3.2, Android 1.6- */
     -webkit-border-radius: 12px; 
     /* Firefox 1-3.6 */
     -moz-border-radius: 12px; 
-    border-radius: 10px;    
+    border-radius: 20px;    
     background: white;    
 
-    padding-bottom: 30px;    
+    padding-bottom: 30px;        
 }
 
 .container h1{
-    border-bottom: 1px solid lightgrey; 
+    border-bottom: 1px solid rgb(241, 229, 229); 
     margin-bottom: 30px;   
     color: grey;
 }
@@ -88,4 +88,18 @@ form ul{
 
 .smelycode{
     height: 700px;
+}
+
+.questionDesc{
+    background-color: rgb(241, 229, 229);
+}
+
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+ 
+    text-align: left;
 }
