conclusão do sintax hhighlighter

--- a/questionnaire/templates/masterquest/incTreePanel.html
+++ b/questionnaire/templates/masterquest/incTreePanel.html
@@ -21,8 +21,9 @@
                 <img src="{% get_static_prefix %}masterquest/images/fileico.png" data-toggle="modal" data-target="#cs2"/>
             </div>
             -->
-            <pre>
-                <code">
+            <pre class="">
+                <!--<code class="language-java">-->
+                <code class="java">    
                     {{dtModel.codeSnippet1}}
                 </code>
             </pre>
