--- a/questionnaire/templates/masterquest/base.html
+++ b/questionnaire/templates/masterquest/base.html
@@ -9,6 +9,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
     <script src="{% static 'masterquest/prism.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'masterquest/styles/default.css' %}">
+    <script src="{% static 'masterquest/highlight.pack.js' %}"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 
     <link rel="stylesheet" type="text/css" href="{% static 'masterquest/style.css' %}">
     <link href="{% static 'masterquest/prism.css' %}" rel="stylesheet" />
