layout com retração de arvore e form + highlightjs

--- a/questionnaire/templates/masterquest/incTreePanel.html
+++ b/questionnaire/templates/masterquest/incTreePanel.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <div class="container-fluid {{class}}" id="gridModelSnippets">
-    <div class="row" id="rowDtree">
+    <div class="row collapse show" id="rowDtree">
         <div class="col">           
             
             <img src="{% get_static_prefix %}masterquest/images/{{dtModel.imgPath}}" />            
