--- a/questionnaire/static/masterquest/style.css
+++ b/questionnaire/static/masterquest/style.css
@@ -103,3 +103,21 @@ pre {
  
     text-align: left;
 }
+
+/* for block of numbers */
+.hljs-ln-numbers {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    text-align: left;
+    color: #ccc;
+    /*border-right: 1px solid #CCC;*/
+    vertical-align: top;
+    padding-right: 5px;
+
+    /* your custom style here */
+}
