--- a/questionnaire/templates/masterquest/base.html
+++ b/questionnaire/templates/masterquest/base.html
@@ -7,15 +7,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
-    <script src="{% static 'masterquest/prism.js' %}"></script>
+
     <link rel="stylesheet" href="{% static 'masterquest/styles/default.css' %}">
     <script src="{% static 'masterquest/highlight.pack.js' %}"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
+    <script src="{% static 'masterquest/highlightjs-line-numbers.min.js' %}"></script>
+    <script>hljs.initHighlightingOnLoad();hljs.initLineNumbersOnLoad();</script>
 
     <link rel="stylesheet" type="text/css" href="{% static 'masterquest/style.css' %}">
-    <link href="{% static 'masterquest/prism.css' %}" rel="stylesheet" />
-        
+            
     <title>MasterQuest</title>
 </head>
 
