mudança de layout: uso de tabs

--- a/questionnaire/static/masterquest/style.css
+++ b/questionnaire/static/masterquest/style.css
@@ -121,3 +121,12 @@ pre {
 
     /* your custom style here */
 }
+
+#formContent{
+    width:50%;
+    margin: 0px auto;
+}
+
+.tab-content{
+    padding-top:20px;
+}
