--- a/questionnaire/templates/masterquest/incTreePanel.html
+++ b/questionnaire/templates/masterquest/incTreePanel.html
@@ -1,38 +1,19 @@
 {% load static %}
 
-<div class="container-fluid {{class}}" id="gridModelSnippets">
-    <div class="row collapse show" id="rowDtree">
-        <div class="col">           
-            
-            <img src="{% get_static_prefix %}masterquest/images/{{dtModel.imgPath}}" />            
-            
-        </div>
+{% if showDt %}
+<div class="tab-pane fade" id="dtContent" role="tabpanel" aria-labelledby="dtContent-tab">
+    <div class="container-fluid {{class}}" id="gridModelSnippets">
+        <img src="{% get_static_prefix %}masterquest/images/{{dtModel.imgPath}}" />
     </div>
-    {% if showCodeSnippets %}
-    <div class="row">
-        <div class="col">
-            <!--
-            <div class="col-sm">
-                <span style="display: block;">Code snippet 1</span>
-                <img src="{% get_static_prefix %}masterquest/images/fileico.png" data-toggle="modal" data-target="#cs1"/>
-            </div>    
-            <div class="col-sm">
-                <span style="display: block;">Code snippet 2</span>
-                <img src="{% get_static_prefix %}masterquest/images/fileico.png" data-toggle="modal" data-target="#cs2"/>
-            </div>
-            -->
-            <pre class="">
-                <!--<code class="language-java">-->
-                <code class="java">    
-                    {{dtModel.codeSnippet1}}
-                </code>
-            </pre>
-        </div>
-    </div>
-    {% endif %}
 </div>
+{% endif %}
 
 {% if showCodeSnippets %}
-<!-- Modals -->
-{% include "masterquest/incModals.html" %}
+<div class="tab-pane fade" id="codeSnippetContent" role="tabpanel" aria-labelledby="codeSnippetContent-tab">
+    <pre>        
+        <code>    
+            {{dtModel.codeSnippet1}}
+        </code>
+    </pre>
+</div>
 {% endif %}
