--- a/questionnaire/templates/masterquest/survey_task_id.html
+++ b/questionnaire/templates/masterquest/survey_task_id.html
@@ -11,24 +11,24 @@
 
 <div class="content">
 
-    <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
+    <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">        
         <li class="nav-item">
-            <a class="nav-link active" id="formContent-tab" data-toggle="tab" href="#formContent" role="tab"
-                aria-controls="formContent" aria-selected="true">Form</a>
+            <a class="nav-link active" id="codeSnippet-tab" data-toggle="tab" href="#codeSnippetContent" role="tab"
+                aria-controls="codeSnippetContent" aria-selected="false">Code view</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" id="dtContent-tab" data-toggle="tab" href="#dtContent" role="tab"
                 aria-controls="dtContent" aria-selected="false">Tree view</a>
-        </li>
+        </li>        
         <li class="nav-item">
-            <a class="nav-link" id="codeSnippet-tab" data-toggle="tab" href="#codeSnippetContent" role="tab"
-                aria-controls="codeSnippetContent" aria-selected="false">Code view</a>
+            <a class="nav-link" id="formContent-tab" data-toggle="tab" href="#formContent" role="tab"
+                aria-controls="formContent" aria-selected="true">Form</a>
         </li>
     </ul>
 
     <div class="tab-content" id="myTabContent">
 
-        <div class="tab-pane fade show active" id="formContent" role="tabpanel" aria-labelledby="formContent-tab">
+        <div class="tab-pane fade" id="formContent" role="tabpanel" aria-labelledby="formContent-tab">
 
             <div class="alert alert-warning alert-dismissible fade show" role="alert">
                 To answer the questions below, you should visualize the corresponding tree and code snippet. Click on the tabs to navigate.
