redimensionamento das templates

--- a/questionnaire/templates/masterquest/base.html
+++ b/questionnaire/templates/masterquest/base.html
@@ -24,7 +24,7 @@
         {% include "masterquest/header.html" %}
     </div>
 
-    <div id="content" class="container-fluid">
+    <div id="content">
         {% block content %}
         {% endblock %}
     </div>
