--- a/questionnaire/templates/masterquest/index.html
+++ b/questionnaire/templates/masterquest/index.html
@@ -1,6 +1,9 @@
 {% extends "masterquest/base.html" %}
 
 {% block content %}
+
+<div class="container">
+
     <h1>Welcome</h1>
 
     <h2 id="research-title">Research - Code Smell Detection: assessing interpretability of decision tree-based detections.</h2>
