--- a/questionnaire/templates/masterquest/participant.html
+++ b/questionnaire/templates/masterquest/participant.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="container" id="newParticipant">
+
     <h1 class="stepTitle">1 - Participant Background</h1>
     
     <fieldset>
@@ -14,5 +16,7 @@
 
         </form>
     </fieldset>
+
+</div>
 
 {% endblock content %}
