--- a/questionnaire/templates/masterquest/survey.html
+++ b/questionnaire/templates/masterquest/survey.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 
+<div class="container-fluid">
     <h1>3 - Classification tree {{classificationTreePosition}} of {{classificationTreeTotal}}</h1>
 
     <!--
@@ -17,3 +18,4 @@
     
 {% endblock content %}
 
+</div>
