--- a/questionnaire/templates/masterquest/instructions.html
+++ b/questionnaire/templates/masterquest/instructions.html
@@ -2,12 +2,15 @@
 
 {% block content %}
 
-<h1>2 - Survey instructions</h1>
+<div class="container">
+    <h1>2 - Survey instructions</h1>
 
-<p>
-    {% lorem 3 p %}
-</p>
+    <p>
+        {% lorem 3 p %}
+    </p>
 
-<a href="{% url 'survey' %}" class="btn btn-primary btn-lg" role="button">Start!</a>
+    <a href="{% url 'survey' %}" class="btn btn-primary btn-lg" role="button">Start!</a>
+
+</div>
 
 {% endblock content %}
