--- a/questionnaire/templates/masterquest/survey_task_id.html
+++ b/questionnaire/templates/masterquest/survey_task_id.html
@@ -9,7 +9,7 @@
 </p>
 -->
 
-<div class="content">
+<div class="container-fluid">
 
     <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">        
         <li class="nav-item">
@@ -22,7 +22,7 @@
         </li>        
         <li class="nav-item">
             <a class="nav-link" id="formContent-tab" data-toggle="tab" href="#formContent" role="tab"
-                aria-controls="formContent" aria-selected="true">Form</a>
+                aria-controls="formContent" aria-selected="true">Submit Form</a>
         </li>
     </ul>
 
